--- a/fetch_api.html
+++ b/fetch_api.html
@@ -14,6 +14,9 @@
         <div id="people">
             <button>Get people</button>
         </div>
+        <div id="all-people">
+            <button>Get all people</button>
+        </div>
     </main>
     <footer>
 
